src/test/ui/macros/macro-attribute.rs
#[doc = $not_there] //~ ERROR expected `]`, found `not_there`
fn main() { }
